--- a/AboutUs.html
+++ b/AboutUs.html
@@ -17,24 +17,28 @@
                 <h3>Kristel Joy G. Bagtas</h3>
                 <p>Section: NW2A</p>
                 <p>Age: 20</p>
+                <!--Contribution-->
             </div>
             <div class="about-us">
                 <img src="Mainimg/kenneth.jpg" alt="Member 2">
                 <h3>John Kenneth M. Abate</h3>
                 <p>Section: NW2A</p>
                 <p>Age: 21</p>
+                <!--Contribution-->
             </div>
             <div class="about-us">
                 <img src="Mainimg/Abby.jfif" alt="Member 3">
                 <h3>Abby Gayle C. Isidro</h3>
                 <p>Section: NW2A</p>
                 <p>Age: 19</p>
+                <!--Contribution-->
             </div>
             <div class="about-us">
                 <img src="Mainimg/ervin.jpg" alt="Member 4">
                 <h3>Ervin Joseph S. Dela Cruz</h3>
                 <p>Section: NW2A</p>
                 <p>Age: 20</p>
+                <!--Contribution-->
         </div>
         <div>
             <input type="button" value="Back to Homepage" class="btn" id="tomain" onclick="btnHomepage()"/>
