--- a/NaturalHistory.html
+++ b/NaturalHistory.html
@@ -11,6 +11,17 @@
     <body class="c">
     <script src="jscript.js" async defer></script>
         <h1>National Museum of Natural History</h1>
+        <div>
+            <h2>About National Museum of Fine Arts</h2>
+            <p>The National Museum of Natural History houses 12 permanent galleries that exhibit the rich biological and</p>
+            <p>geological diversity of the Philippines. It includes creatively curated displays of botanical, and geological specimens that represent our unique natural history.</p>
+            <p>Situated at the center of the museum is a “Tree of Life” structure that proudly connects all the unique ecosystems in the Philippines,</p>
+            <p>from our magnificent mountain ridges to the outstanding marine reefs. </p>
+            <br>
+            <p>In retrospect, the National Museum of Natural History focuses on the biodiversity</p>
+            <p>and ecosystem of the Philippines. The exhibits are mostly taxidermized animals that are local to our country in a bid to preserve seemingly lost treasures. </p>
+            <p>The usual suspects such as the Philippine eagle and a real-life replica of Lolong, the largest saltwater crocodile in captivity, can be found here.</p>
+        </div>
         <div class="slider">
             <div class="img-box">
                 <img src="naturalhistoimg/Akbil.png" class="slider-img">
