--- a/FineArts.html
+++ b/FineArts.html
@@ -11,6 +11,15 @@
     <body class="b">
     <script src="jscript.js" async defer></script>
         <h1>National Museum of Fine Arts</h1>
+         <div>
+            <h2>About National Museum of Fine Arts</h2>
+            <p>The National Museum of Fine Arts is home to 29 galleries and hallway exhibitions comprising of 19th century Filipino masters, </p>
+            <p>National Artists, leading modern painters, sculptors, and printmakers. Also on view are art loans from other government institutions, organizations, and individuals.</p>
+            <br>
+            <p>One of the more notable pieces in the museum, Juan Luna's Spoliarium is imposingly displayed in the main gallery and greets all visitors </p>
+            <p>who are about to start their tour through the halls of the museum. The harrowing gladiator scene sets the stage for a journey through time telling the story of the Philippines</p>
+            <p>through magnificent artworks as seen through the lenses of the country's best and most talented artists throughout history.</p>
+        </div>
         <div class="slider">
             <div class="img-box">
                 <img src="artsimg/Builders.png" class="slider-img">
