--- a/Anthropology.html
+++ b/Anthropology.html
@@ -11,6 +11,16 @@
     <body class="a">
     <script src="jscript.js" async defer></script>
         <h1>National Museum of Anthropology</h1>
+        <div>
+            <h2>About National Museum of Fine Arts</h2>
+            <p>The National Museum of Anthropology stages the Philippine ethnographic and terrestrial </p>
+            <p>and underwater archaeological collections narrating the story of the Philippines from the past,</p>
+            <p>presented through artifacts as evidences of its pre-history.</p>
+            <br>
+            <p>It is located in the Agrifina Circle, Rizal Park, Manila adjacent to the National Museum of Fine Arts building.</p>
+            <p>Built c. 1916-1918 from a neoclassical design by Canadian-American architect Ralph Harrington Doane when he was consulting architect to the</p>
+            <p>Philippine government, building formerly housed the Department of Finance. It also houses the wreck of the San Diego, ancient artifacts, and zoology divisions. </p>
+        </div>
         <div class="slider">
             <div class="img-box">
                 <img src="anthroimg/Baybayin.png" class="slider-img">
